[package]
name = "stors"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures="0.3.17"
hyper={ version="0.14.13", features=["full"] }
serde_json="1.0.68"
tokio={ version="1.12.0", features=["full"] }
