[package]
name = "stors"
version = "0.1.0"
edition = "2018"

[lib]
name = "stors"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes="1.1.0"
dashmap="4.0.2"
err-derive = "0.3.0"
futures="0.3.17"
hyper={ version="0.14.13", features=["full"] }
lazy_static="1.4.0"
port_scanner="0.1.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json="1.0.68"
tokio={ version="1.12.0", features=["full"] }