[package]
name = "litte_raft"
version = "0.1.0"
edition = "2018"

[lib]
name = "little_raft"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1.51"
atoi = "0.4.0"
bytes="1.1.0"
dashmap={ version="4.0.2", features=["rayon"] }
err-derive = "0.3.0"
futures="0.3.17"
hyper={ version="0.14.13", features=["full"] }
lazy_static="1.4.0"
port_scanner="0.1.5"
rand="0.8.4"
serde={ version = "1.0.130", features = ["derive"] }
serde_json="1.0.68"
test-context = "0.1.3"
tokio={ version="1.14.0", features=["full"] }
tokio-stream={ version="0.1.8", features=["io-util"] }